Secondary cannot restart replication

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • v4.4, v4.2, v4.0
    • Repl 2020-11-30, Repl 2020-12-14
    • 0
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      After SERVER-33747, initial_sync_document_validation.js times out on 3.6. The problem is that my SERVER-33747 change, ReplicationCoordinatorImpl::_startDataReplication exits early if it's ever been called before. The sequence _startDataReplication -> _stopDataReplication -> _startDataReplication therefore no longer actually restarts data replication.

      This shows up in initial_sync_document_validation.js because this test calls the "resync" command. The "resync" command was removed after 3.6 (SERVER-31239) leaving ReplicationCoordinatorImpl::resyncData with one caller, replSetSyncFrom, the method was completely removed after 4.4 (SERVER-46831).

      Does the replSetSyncFrom command suffer the same deadlock? In all versions?

            Assignee:
            A. Jesse Jiryu Davis
            Reporter:
            A. Jesse Jiryu Davis
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: