SERVER-53026 Fix "resync" command

(cherry picked from commit a574d23ec0b7d06b8d872bf64136308f541a796d)
(cherry picked from commit 68bf17aa3b19d0b7f53b7a1b6fe1ebbafdf558d2)
(cherry picked from commit 265e3c7d0d40457f0e8483d3ed4161ac3896d04a)